# Terminal

./: CMakeLists.txt  FindText.pro  MainWindow.cpp  MainWindow.h  TextWidget.cpp  TextWidget.h  consoledialog.cpp  consoledialog.h  consoledialog.ui  highlighter.cpp  highlighter.h  pseudoterminal.pri
demo/: DemoDialog.cpp  DemoDialog.h  TerminalDemo.pro  main.cpp  resource.qrc  treeModel.txt
src/: CMakeLists.txt  colorizer.cpp  colorizer.h  completerloader.cpp  completerloader.h  highlighter.cpp  lineedit.cpp  lineedit.h  terminaldialog.cpp  terminaldialog.h  terminaldialog.ui  treemodelcompleter.cpp  treemodelcompleter.h
